Hermes/HermesParser.output
   0  $accept : %entry% $end

   1  Lval : ID
   2       | ID LBRACK Exp RBRACK
   3       | UNSAFE ID LBRACK Exp RBRACK

   4  Lvals :
   5        | Lval
   6        | Lval COMMA Lvals

   7  Exp : Lval
   8      | NUM
   9      | Exp PLUS Exp
  10      | Exp MINUS Exp
  11      | Exp TIMES Exp
  12      | Exp DIVIDE Exp
  13      | Exp MODULO Exp
  14      | Exp XOR Exp
  15      | Exp BAND Exp
  16      | Exp BOR Exp
  17      | Exp SHIFTL Exp
  18      | Exp SHIFTR Exp
  19      | Exp EQUAL Exp
  20      | Exp NEQ Exp
  21      | Exp GREATER Exp
  22      | Exp LESS Exp
  23      | Exp LEQ Exp
  24      | Exp GEQ Exp
  25      | BNOT Exp
  26      | SIZE ID
  27      | ALLZERO ID LBRACK Exp RBRACK
  28      | LPAR Exp RPAR

  29  IntType : U8
  30          | U16
  31          | U32
  32          | U64

  33  ValType : SECRET
  34          | PUBLIC
  35          |

  36  VarType : ValType IntType

  37  VarSpec : ID
  38          | ID LBRACK Exp RBRACK

  39  VarSpecs : VarSpec
  40           | VarSpec COMMA VarSpecs

  41  Decls1 :
  42         | VarType VarSpecs SEMICOLON Decls1
  43         | CONST ID EQ NUM SEMICOLON Decls1

  44  UpdateOp : ADD
  45           | SUB
  46           | XORWITH
  47           | ROL
  48           | ROR

  49  Stat : SEMICOLON
  50       | Lval UpdateOp Exp SEMICOLON
  51       | Lval INC SEMICOLON
  52       | Lval DEC SEMICOLON
  53       | IF LPAR Exp RPAR Stat ELSE Stat
  54       | IF LPAR Exp RPAR Stat
  55       | Lval SWAP Lval SEMICOLON
  56       | LBRACE Decls1 Stats RBRACE
  57       | FOR LPAR ID EQ Exp SEMICOLON Exp RPAR Stat
  58       | CALL ID LPAR Lvals RPAR SEMICOLON
  59       | UNCALL ID LPAR Lvals RPAR SEMICOLON
  60       | ASSERT Exp SEMICOLON
  61       | Stat MASTERSPACE Stat

  62  Stats :
  63        | Stat Stats

  64  Args : VarType ID
  65       | VarType ID LBRACK RBRACK
  66       | Args COMMA Args

  67  Procedure : ID LPAR Args RPAR Stat

  68  Program : Procedure EOF
  69          | Procedure Program

  70  %entry% : '\001' Program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . Program  (70)

	ID  shift 3
	.  error

	Program  goto 4
	Procedure  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Procedure : ID . LPAR Args RPAR Stat  (67)

	LPAR  shift 6
	.  error


state 4
	%entry% : '\001' Program .  (70)

	.  reduce 70


state 5
	Program : Procedure . EOF  (68)
	Program : Procedure . Program  (69)

	EOF  shift 7
	ID  shift 3
	.  error

	Program  goto 8
	Procedure  goto 5


state 6
	Procedure : ID LPAR . Args RPAR Stat  (67)
	ValType : .  (35)

	PUBLIC  shift 9
	SECRET  shift 10
	U16  reduce 35
	U32  reduce 35
	U64  reduce 35
	U8  reduce 35

	Args  goto 11
	ValType  goto 12
	VarType  goto 13


state 7
	Program : Procedure EOF .  (68)

	.  reduce 68


state 8
	Program : Procedure Program .  (69)

	.  reduce 69


state 9
	ValType : PUBLIC .  (34)

	.  reduce 34


state 10
	ValType : SECRET .  (33)

	.  reduce 33


state 11
	Args : Args . COMMA Args  (66)
	Procedure : ID LPAR Args . RPAR Stat  (67)

	COMMA  shift 14
	RPAR  shift 15
	.  error


state 12
	VarType : ValType . IntType  (36)

	U16  shift 16
	U32  shift 17
	U64  shift 18
	U8  shift 19
	.  error

	IntType  goto 20


state 13
	Args : VarType . ID  (64)
	Args : VarType . ID LBRACK RBRACK  (65)

	ID  shift 21
	.  error


state 14
	Args : Args COMMA . Args  (66)
	ValType : .  (35)

	PUBLIC  shift 9
	SECRET  shift 10
	U16  reduce 35
	U32  reduce 35
	U64  reduce 35
	U8  reduce 35

	Args  goto 22
	ValType  goto 12
	VarType  goto 13


state 15
	Procedure : ID LPAR Args RPAR . Stat  (67)

	ASSERT  shift 23
	CALL  shift 24
	FOR  shift 25
	ID  shift 26
	IF  shift 27
	LBRACE  shift 28
	SEMICOLON  shift 29
	UNCALL  shift 30
	UNSAFE  shift 31
	.  error

	Stat  goto 32
	Lval  goto 33


state 16
	IntType : U16 .  (30)

	.  reduce 30


state 17
	IntType : U32 .  (31)

	.  reduce 31


state 18
	IntType : U64 .  (32)

	.  reduce 32


state 19
	IntType : U8 .  (29)

	.  reduce 29


state 20
	VarType : ValType IntType .  (36)

	.  reduce 36


state 21
	Args : VarType ID .  (64)
	Args : VarType ID . LBRACK RBRACK  (65)

	LBRACK  shift 34
	COMMA  reduce 64
	RPAR  reduce 64


state 22
	Args : Args . COMMA Args  (66)
	Args : Args COMMA Args .  (66)

	COMMA  shift 14
	RPAR  reduce 66


state 23
	Stat : ASSERT . Exp SEMICOLON  (60)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 40
	Lval  goto 41


state 24
	Stat : CALL . ID LPAR Lvals RPAR SEMICOLON  (58)

	ID  shift 42
	.  error


state 25
	Stat : FOR . LPAR ID EQ Exp SEMICOLON Exp RPAR Stat  (57)

	LPAR  shift 43
	.  error


state 26
	Lval : ID .  (1)
	Lval : ID . LBRACK Exp RBRACK  (2)

	LBRACK  shift 44
	ADD  reduce 1
	BAND  reduce 1
	BOR  reduce 1
	COMMA  reduce 1
	DEC  reduce 1
	DIVIDE  reduce 1
	EQUAL  reduce 1
	GEQ  reduce 1
	GREATER  reduce 1
	INC  reduce 1
	LEQ  reduce 1
	LESS  reduce 1
	MINUS  reduce 1
	MODULO  reduce 1
	NEQ  reduce 1
	PLUS  reduce 1
	RBRACK  reduce 1
	ROL  reduce 1
	ROR  reduce 1
	RPAR  reduce 1
	SEMICOLON  reduce 1
	SHIFTL  reduce 1
	SHIFTR  reduce 1
	SUB  reduce 1
	SWAP  reduce 1
	TIMES  reduce 1
	XOR  reduce 1
	XORWITH  reduce 1


state 27
	Stat : IF . LPAR Exp RPAR Stat ELSE Stat  (53)
	Stat : IF . LPAR Exp RPAR Stat  (54)

	LPAR  shift 45
	.  error


state 28
	Stat : LBRACE . Decls1 Stats RBRACE  (56)
	ValType : .  (35)
	Decls1 : .  (41)

	CONST  shift 46
	PUBLIC  shift 9
	SECRET  shift 10
	ASSERT  reduce 41
	CALL  reduce 41
	FOR  reduce 41
	ID  reduce 41
	IF  reduce 41
	LBRACE  reduce 41
	RBRACE  reduce 41
	SEMICOLON  reduce 41
	U16  reduce 35
	U32  reduce 35
	U64  reduce 35
	U8  reduce 35
	UNCALL  reduce 41
	UNSAFE  reduce 41

	Decls1  goto 47
	ValType  goto 12
	VarType  goto 48


state 29
	Stat : SEMICOLON .  (49)

	.  reduce 49


state 30
	Stat : UNCALL . ID LPAR Lvals RPAR SEMICOLON  (59)

	ID  shift 49
	.  error


state 31
	Lval : UNSAFE . ID LBRACK Exp RBRACK  (3)

	ID  shift 50
	.  error


state 32
	Stat : Stat . MASTERSPACE Stat  (61)
	Procedure : ID LPAR Args RPAR Stat .  (67)

	MASTERSPACE  shift 51
	EOF  reduce 67
	ID  reduce 67


state 33
	Stat : Lval . UpdateOp Exp SEMICOLON  (50)
	Stat : Lval . INC SEMICOLON  (51)
	Stat : Lval . DEC SEMICOLON  (52)
	Stat : Lval . SWAP Lval SEMICOLON  (55)

	ADD  shift 52
	DEC  shift 53
	INC  shift 54
	ROL  shift 55
	ROR  shift 56
	SUB  shift 57
	SWAP  shift 58
	XORWITH  shift 59
	.  error

	UpdateOp  goto 60


state 34
	Args : VarType ID LBRACK . RBRACK  (65)

	RBRACK  shift 61
	.  error


state 35
	Exp : ALLZERO . ID LBRACK Exp RBRACK  (27)

	ID  shift 62
	.  error


state 36
	Exp : BNOT . Exp  (25)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 63
	Lval  goto 41


state 37
	Exp : LPAR . Exp RPAR  (28)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 64
	Lval  goto 41


state 38
	Exp : NUM .  (8)

	.  reduce 8


state 39
	Exp : SIZE . ID  (26)

	ID  shift 65
	.  error


state 40
	Exp : Exp . PLUS Exp  (9)
	Exp : Exp . MINUS Exp  (10)
	Exp : Exp . TIMES Exp  (11)
	Exp : Exp . DIVIDE Exp  (12)
	Exp : Exp . MODULO Exp  (13)
	Exp : Exp . XOR Exp  (14)
	Exp : Exp . BAND Exp  (15)
	Exp : Exp . BOR Exp  (16)
	Exp : Exp . SHIFTL Exp  (17)
	Exp : Exp . SHIFTR Exp  (18)
	Exp : Exp . EQUAL Exp  (19)
	Exp : Exp . NEQ Exp  (20)
	Exp : Exp . GREATER Exp  (21)
	Exp : Exp . LESS Exp  (22)
	Exp : Exp . LEQ Exp  (23)
	Exp : Exp . GEQ Exp  (24)
	Stat : ASSERT Exp . SEMICOLON  (60)

	BAND  shift 66
	BOR  shift 67
	DIVIDE  shift 68
	EQUAL  shift 69
	GEQ  shift 70
	GREATER  shift 71
	LEQ  shift 72
	LESS  shift 73
	MINUS  shift 74
	MODULO  shift 75
	NEQ  shift 76
	PLUS  shift 77
	SEMICOLON  shift 78
	SHIFTL  shift 79
	SHIFTR  shift 80
	TIMES  shift 81
	XOR  shift 82
	.  error


state 41
	Exp : Lval .  (7)

	.  reduce 7


state 42
	Stat : CALL ID . LPAR Lvals RPAR SEMICOLON  (58)

	LPAR  shift 83
	.  error


state 43
	Stat : FOR LPAR . ID EQ Exp SEMICOLON Exp RPAR Stat  (57)

	ID  shift 84
	.  error


state 44
	Lval : ID LBRACK . Exp RBRACK  (2)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 85
	Lval  goto 41


state 45
	Stat : IF LPAR . Exp RPAR Stat ELSE Stat  (53)
	Stat : IF LPAR . Exp RPAR Stat  (54)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 86
	Lval  goto 41


state 46
	Decls1 : CONST . ID EQ NUM SEMICOLON Decls1  (43)

	ID  shift 87
	.  error


state 47
	Stat : LBRACE Decls1 . Stats RBRACE  (56)
	Stats : .  (62)

	ASSERT  shift 23
	CALL  shift 24
	FOR  shift 25
	ID  shift 26
	IF  shift 27
	LBRACE  shift 28
	SEMICOLON  shift 29
	UNCALL  shift 30
	UNSAFE  shift 31
	RBRACE  reduce 62

	Stat  goto 88
	Stats  goto 89
	Lval  goto 33


state 48
	Decls1 : VarType . VarSpecs SEMICOLON Decls1  (42)

	ID  shift 90
	.  error

	VarSpec  goto 91
	VarSpecs  goto 92


state 49
	Stat : UNCALL ID . LPAR Lvals RPAR SEMICOLON  (59)

	LPAR  shift 93
	.  error


state 50
	Lval : UNSAFE ID . LBRACK Exp RBRACK  (3)

	LBRACK  shift 94
	.  error


state 51
	Stat : Stat MASTERSPACE . Stat  (61)

	ASSERT  shift 23
	CALL  shift 24
	FOR  shift 25
	ID  shift 26
	IF  shift 27
	LBRACE  shift 28
	SEMICOLON  shift 29
	UNCALL  shift 30
	UNSAFE  shift 31
	.  error

	Stat  goto 95
	Lval  goto 33


state 52
	UpdateOp : ADD .  (44)

	.  reduce 44


state 53
	Stat : Lval DEC . SEMICOLON  (52)

	SEMICOLON  shift 96
	.  error


state 54
	Stat : Lval INC . SEMICOLON  (51)

	SEMICOLON  shift 97
	.  error


state 55
	UpdateOp : ROL .  (47)

	.  reduce 47


state 56
	UpdateOp : ROR .  (48)

	.  reduce 48


state 57
	UpdateOp : SUB .  (45)

	.  reduce 45


state 58
	Stat : Lval SWAP . Lval SEMICOLON  (55)

	ID  shift 26
	UNSAFE  shift 31
	.  error

	Lval  goto 98


state 59
	UpdateOp : XORWITH .  (46)

	.  reduce 46


state 60
	Stat : Lval UpdateOp . Exp SEMICOLON  (50)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 99
	Lval  goto 41


state 61
	Args : VarType ID LBRACK RBRACK .  (65)

	.  reduce 65


state 62
	Exp : ALLZERO ID . LBRACK Exp RBRACK  (27)

	LBRACK  shift 100
	.  error


state 63
	Exp : Exp . PLUS Exp  (9)
	Exp : Exp . MINUS Exp  (10)
	Exp : Exp . TIMES Exp  (11)
	Exp : Exp . DIVIDE Exp  (12)
	Exp : Exp . MODULO Exp  (13)
	Exp : Exp . XOR Exp  (14)
	Exp : Exp . BAND Exp  (15)
	Exp : Exp . BOR Exp  (16)
	Exp : Exp . SHIFTL Exp  (17)
	Exp : Exp . SHIFTR Exp  (18)
	Exp : Exp . EQUAL Exp  (19)
	Exp : Exp . NEQ Exp  (20)
	Exp : Exp . GREATER Exp  (21)
	Exp : Exp . LESS Exp  (22)
	Exp : Exp . LEQ Exp  (23)
	Exp : Exp . GEQ Exp  (24)
	Exp : BNOT Exp .  (25)

	BAND  reduce 25
	BOR  reduce 25
	DIVIDE  reduce 25
	EQUAL  reduce 25
	GEQ  reduce 25
	GREATER  reduce 25
	LEQ  reduce 25
	LESS  reduce 25
	MINUS  reduce 25
	MODULO  reduce 25
	NEQ  reduce 25
	PLUS  reduce 25
	RBRACK  reduce 25
	RPAR  reduce 25
	SEMICOLON  reduce 25
	SHIFTL  reduce 25
	SHIFTR  reduce 25
	TIMES  reduce 25
	XOR  reduce 25


state 64
	Exp : Exp . PLUS Exp  (9)
	Exp : Exp . MINUS Exp  (10)
	Exp : Exp . TIMES Exp  (11)
	Exp : Exp . DIVIDE Exp  (12)
	Exp : Exp . MODULO Exp  (13)
	Exp : Exp . XOR Exp  (14)
	Exp : Exp . BAND Exp  (15)
	Exp : Exp . BOR Exp  (16)
	Exp : Exp . SHIFTL Exp  (17)
	Exp : Exp . SHIFTR Exp  (18)
	Exp : Exp . EQUAL Exp  (19)
	Exp : Exp . NEQ Exp  (20)
	Exp : Exp . GREATER Exp  (21)
	Exp : Exp . LESS Exp  (22)
	Exp : Exp . LEQ Exp  (23)
	Exp : Exp . GEQ Exp  (24)
	Exp : LPAR Exp . RPAR  (28)

	BAND  shift 66
	BOR  shift 67
	DIVIDE  shift 68
	EQUAL  shift 69
	GEQ  shift 70
	GREATER  shift 71
	LEQ  shift 72
	LESS  shift 73
	MINUS  shift 74
	MODULO  shift 75
	NEQ  shift 76
	PLUS  shift 77
	RPAR  shift 101
	SHIFTL  shift 79
	SHIFTR  shift 80
	TIMES  shift 81
	XOR  shift 82
	.  error


state 65
	Exp : SIZE ID .  (26)

	.  reduce 26


state 66
	Exp : Exp BAND . Exp  (15)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 102
	Lval  goto 41


state 67
	Exp : Exp BOR . Exp  (16)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 103
	Lval  goto 41


state 68
	Exp : Exp DIVIDE . Exp  (12)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 104
	Lval  goto 41


state 69
	Exp : Exp EQUAL . Exp  (19)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 105
	Lval  goto 41


state 70
	Exp : Exp GEQ . Exp  (24)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 106
	Lval  goto 41


state 71
	Exp : Exp GREATER . Exp  (21)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 107
	Lval  goto 41


state 72
	Exp : Exp LEQ . Exp  (23)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 108
	Lval  goto 41


state 73
	Exp : Exp LESS . Exp  (22)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 109
	Lval  goto 41


state 74
	Exp : Exp MINUS . Exp  (10)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 110
	Lval  goto 41


state 75
	Exp : Exp MODULO . Exp  (13)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 111
	Lval  goto 41


state 76
	Exp : Exp NEQ . Exp  (20)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 112
	Lval  goto 41


state 77
	Exp : Exp PLUS . Exp  (9)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 113
	Lval  goto 41


state 78
	Stat : ASSERT Exp SEMICOLON .  (60)

	.  reduce 60


state 79
	Exp : Exp SHIFTL . Exp  (17)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 114
	Lval  goto 41


state 80
	Exp : Exp SHIFTR . Exp  (18)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 115
	Lval  goto 41


state 81
	Exp : Exp TIMES . Exp  (11)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 116
	Lval  goto 41


state 82
	Exp : Exp XOR . Exp  (14)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 117
	Lval  goto 41


state 83
	Stat : CALL ID LPAR . Lvals RPAR SEMICOLON  (58)
	Lvals : .  (4)

	ID  shift 26
	UNSAFE  shift 31
	RPAR  reduce 4

	Lval  goto 118
	Lvals  goto 119


state 84
	Stat : FOR LPAR ID . EQ Exp SEMICOLON Exp RPAR Stat  (57)

	EQ  shift 120
	.  error


state 85
	Lval : ID LBRACK Exp . RBRACK  (2)
	Exp : Exp . PLUS Exp  (9)
	Exp : Exp . MINUS Exp  (10)
	Exp : Exp . TIMES Exp  (11)
	Exp : Exp . DIVIDE Exp  (12)
	Exp : Exp . MODULO Exp  (13)
	Exp : Exp . XOR Exp  (14)
	Exp : Exp . BAND Exp  (15)
	Exp : Exp . BOR Exp  (16)
	Exp : Exp . SHIFTL Exp  (17)
	Exp : Exp . SHIFTR Exp  (18)
	Exp : Exp . EQUAL Exp  (19)
	Exp : Exp . NEQ Exp  (20)
	Exp : Exp . GREATER Exp  (21)
	Exp : Exp . LESS Exp  (22)
	Exp : Exp . LEQ Exp  (23)
	Exp : Exp . GEQ Exp  (24)

	BAND  shift 66
	BOR  shift 67
	DIVIDE  shift 68
	EQUAL  shift 69
	GEQ  shift 70
	GREATER  shift 71
	LEQ  shift 72
	LESS  shift 73
	MINUS  shift 74
	MODULO  shift 75
	NEQ  shift 76
	PLUS  shift 77
	RBRACK  shift 121
	SHIFTL  shift 79
	SHIFTR  shift 80
	TIMES  shift 81
	XOR  shift 82
	.  error


state 86
	Exp : Exp . PLUS Exp  (9)
	Exp : Exp . MINUS Exp  (10)
	Exp : Exp . TIMES Exp  (11)
	Exp : Exp . DIVIDE Exp  (12)
	Exp : Exp . MODULO Exp  (13)
	Exp : Exp . XOR Exp  (14)
	Exp : Exp . BAND Exp  (15)
	Exp : Exp . BOR Exp  (16)
	Exp : Exp . SHIFTL Exp  (17)
	Exp : Exp . SHIFTR Exp  (18)
	Exp : Exp . EQUAL Exp  (19)
	Exp : Exp . NEQ Exp  (20)
	Exp : Exp . GREATER Exp  (21)
	Exp : Exp . LESS Exp  (22)
	Exp : Exp . LEQ Exp  (23)
	Exp : Exp . GEQ Exp  (24)
	Stat : IF LPAR Exp . RPAR Stat ELSE Stat  (53)
	Stat : IF LPAR Exp . RPAR Stat  (54)

	BAND  shift 66
	BOR  shift 67
	DIVIDE  shift 68
	EQUAL  shift 69
	GEQ  shift 70
	GREATER  shift 71
	LEQ  shift 72
	LESS  shift 73
	MINUS  shift 74
	MODULO  shift 75
	NEQ  shift 76
	PLUS  shift 77
	RPAR  shift 122
	SHIFTL  shift 79
	SHIFTR  shift 80
	TIMES  shift 81
	XOR  shift 82
	.  error


state 87
	Decls1 : CONST ID . EQ NUM SEMICOLON Decls1  (43)

	EQ  shift 123
	.  error


state 88
	Stat : Stat . MASTERSPACE Stat  (61)
	Stats : Stat . Stats  (63)
	Stats : .  (62)

	ASSERT  shift 23
	CALL  shift 24
	FOR  shift 25
	ID  shift 26
	IF  shift 27
	LBRACE  shift 28
	MASTERSPACE  shift 51
	SEMICOLON  shift 29
	UNCALL  shift 30
	UNSAFE  shift 31
	RBRACE  reduce 62

	Stat  goto 88
	Stats  goto 124
	Lval  goto 33


state 89
	Stat : LBRACE Decls1 Stats . RBRACE  (56)

	RBRACE  shift 125
	.  error


state 90
	VarSpec : ID .  (37)
	VarSpec : ID . LBRACK Exp RBRACK  (38)

	LBRACK  shift 126
	COMMA  reduce 37
	SEMICOLON  reduce 37


state 91
	VarSpecs : VarSpec .  (39)
	VarSpecs : VarSpec . COMMA VarSpecs  (40)

	COMMA  shift 127
	SEMICOLON  reduce 39


state 92
	Decls1 : VarType VarSpecs . SEMICOLON Decls1  (42)

	SEMICOLON  shift 128
	.  error


state 93
	Stat : UNCALL ID LPAR . Lvals RPAR SEMICOLON  (59)
	Lvals : .  (4)

	ID  shift 26
	UNSAFE  shift 31
	RPAR  reduce 4

	Lval  goto 118
	Lvals  goto 129


state 94
	Lval : UNSAFE ID LBRACK . Exp RBRACK  (3)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 130
	Lval  goto 41


state 95
	Stat : Stat . MASTERSPACE Stat  (61)
	Stat : Stat MASTERSPACE Stat .  (61)

	MASTERSPACE  shift 51
	ASSERT  reduce 61
	CALL  reduce 61
	ELSE  reduce 61
	EOF  reduce 61
	FOR  reduce 61
	ID  reduce 61
	IF  reduce 61
	LBRACE  reduce 61
	RBRACE  reduce 61
	SEMICOLON  reduce 61
	UNCALL  reduce 61
	UNSAFE  reduce 61


state 96
	Stat : Lval DEC SEMICOLON .  (52)

	.  reduce 52


state 97
	Stat : Lval INC SEMICOLON .  (51)

	.  reduce 51


state 98
	Stat : Lval SWAP Lval . SEMICOLON  (55)

	SEMICOLON  shift 131
	.  error


state 99
	Exp : Exp . PLUS Exp  (9)
	Exp : Exp . MINUS Exp  (10)
	Exp : Exp . TIMES Exp  (11)
	Exp : Exp . DIVIDE Exp  (12)
	Exp : Exp . MODULO Exp  (13)
	Exp : Exp . XOR Exp  (14)
	Exp : Exp . BAND Exp  (15)
	Exp : Exp . BOR Exp  (16)
	Exp : Exp . SHIFTL Exp  (17)
	Exp : Exp . SHIFTR Exp  (18)
	Exp : Exp . EQUAL Exp  (19)
	Exp : Exp . NEQ Exp  (20)
	Exp : Exp . GREATER Exp  (21)
	Exp : Exp . LESS Exp  (22)
	Exp : Exp . LEQ Exp  (23)
	Exp : Exp . GEQ Exp  (24)
	Stat : Lval UpdateOp Exp . SEMICOLON  (50)

	BAND  shift 66
	BOR  shift 67
	DIVIDE  shift 68
	EQUAL  shift 69
	GEQ  shift 70
	GREATER  shift 71
	LEQ  shift 72
	LESS  shift 73
	MINUS  shift 74
	MODULO  shift 75
	NEQ  shift 76
	PLUS  shift 77
	SEMICOLON  shift 132
	SHIFTL  shift 79
	SHIFTR  shift 80
	TIMES  shift 81
	XOR  shift 82
	.  error


state 100
	Exp : ALLZERO ID LBRACK . Exp RBRACK  (27)

	ALLZERO  shift 35
	BNOT  shift 36
	ID  shift 26
	LPAR  shift 37
	NUM  shift 38
	SIZE  shift 39
	UNSAFE  shift 31
	.  error

	Exp  goto 133
	Lval  goto 41


state 101
	Exp : LPAR Exp RPAR .  (28)

	.  reduce 28


state 102
	Exp : Exp . PLUS Exp  (9)
	Exp : Exp . MINUS Exp  (10)
	Exp : Exp . TIMES Exp  (11)
	Exp : Exp . DIVIDE Exp  (12)
	Exp : Exp . MODULO Exp  (13)
	Exp : Exp . XOR Exp  (14)
	Exp : Exp . BAND Exp  (15)
	Exp : Exp BAND Exp .  (15)
	Exp : Exp . BOR Exp  (16)
	Exp : Exp . SHIFTL Exp  (17)
	Exp : Exp . SHIFTR Exp  (18)
	Exp : Exp . EQUAL Exp  (19)
	Exp : Exp . NEQ Exp  (20)
	Exp : Exp . GREATER Exp  (21)
	Exp : Exp . LESS Exp  (22)
	Exp : Exp . LEQ Exp  (23)
	Exp : Exp . GEQ Exp  (24)

	DIVIDE  shift 68
	EQUAL  shift 69
	GEQ  shift 70
	GREATER  shift 71
	LEQ  shift 72
	LESS  shift 73
	MINUS  shift 74
	MODULO  shift 75
	NEQ  shift 76
	PLUS  shift 77
	SHIFTL  shift 79
	SHIFTR  shift 80
	TIMES  shift 81
	BAND  reduce 15
	BOR  reduce 15
	RBRACK  reduce 15
	RPAR  reduce 15
	SEMICOLON  reduce 15
	XOR  reduce 15


state 103
	Exp : Exp . PLUS Exp  (9)
	Exp : Exp . MINUS Exp  (10)
	Exp : Exp . TIMES Exp  (11)
	Exp : Exp . DIVIDE Exp  (12)
	Exp : Exp . MODULO Exp  (13)
	Exp : Exp . XOR Exp  (14)
	Exp : Exp . BAND Exp  (15)
	Exp : Exp . BOR Exp  (16)
	Exp : Exp BOR Exp .  (16)
	Exp : Exp . SHIFTL Exp  (17)
	Exp : Exp . SHIFTR Exp  (18)
	Exp : Exp . EQUAL Exp  (19)
	Exp : Exp . NEQ Exp  (20)
	Exp : Exp . GREATER Exp  (21)
	Exp : Exp . LESS Exp  (22)
	Exp : Exp . LEQ Exp  (23)
	Exp : Exp . GEQ Exp  (24)

	BAND  shift 66
	DIVIDE  shift 68
	EQUAL  shift 69
	GEQ  shift 70
	GREATER  shift 71
	LEQ  shift 72
	LESS  shift 73
	MINUS  shift 74
	MODULO  shift 75
	NEQ  shift 76
	PLUS  shift 77
	SHIFTL  shift 79
	SHIFTR  shift 80
	TIMES  shift 81
	BOR  reduce 16
	RBRACK  reduce 16
	RPAR  reduce 16
	SEMICOLON  reduce 16
	XOR  reduce 16

